--- a/index.html
+++ b/index.html
@@ -9,6 +9,10 @@
 <body>
     <div class="centered-content">
         Willst du mein Valentinstagsdate sein?
+        <div class="response-buttons">
+            <button id="yes-button">Ja</button>
+            <button id="no-button">Nein</button>
+        </div>
     </div>
 </body>
 </html>
