--- a/index.html
+++ b/index.html
@@ -14,5 +14,21 @@
             <button id="no-button">Nein</button>
         </div>
     </div>
+
+    <script>
+    document.getElementById('no-button').addEventListener('click', function(event) {
+        const button = event.target;
+        const maxX = window.innerWidth - button.offsetWidth;
+        const maxY = window.innerHeight - button.offsetHeight;
+
+        const randomX = Math.random() * maxX;
+        const randomY = Math.random() * maxY;
+
+        button.style.position = 'fixed'; // Erlaubt die freie Positionierung
+        button.style.left = randomX + 'px';
+        button.style.top = randomY + 'px';
+    });
+    </script>
+
 </body>
 </html>
