--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
     <!-- Slider-Container (versteckt bis Konfetti fertig ist) -->
     <div class="swiper-container" style="display:none;">
         <div class="swiper-wrapper">
-            <div class="swiper-slide"><img src="assets/image1.jpg" alt="Bild 1"></div>
+            <div class="swiper-slide"><img src="assets/us.gif" alt="Bild 1"></div>
             <div class="swiper-slide"><img src="assets/image2.jpg" alt="Bild 2"></div>
             <!-- Weitere Bilder hier -->
         </div>
