--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <link rel="stylesheet" href="https://unpkg.com/swiper/swiper-bundle.min.css" />
 </head>
 <body>
-    <div class="centered-content">
+    <div class="centered-content" id="dialog">
         Willst du mein Valentinstagsdate sein?
         <div class="response-buttons">
             <button id="yes-button">Ja</button>
