--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <title>Valentinstag</title>
     <link rel="stylesheet" href="assets/css/styles.css" />
     <link rel="stylesheet" href="https://unpkg.com/swiper/swiper-bundle.min.css" />
+    <link rel="icon" type="image/png" sizes="32x32" href="assets/herz-icon.jpg">
 </head>
 <body>
     <div class="centered-content" id="dialog">
