--- a/index.html
+++ b/index.html
@@ -19,7 +19,12 @@
     <!-- Slider-Container (versteckt bis Konfetti fertig ist) -->
     <div class="swiper-container" style="display:none;">
         <div class="swiper-wrapper">
-            <div class="swiper-slide"><img src="assets/us.gif" alt="Bild 1"></div>
+            <div class="swiper-slide"><img src="assets/us.gif" alt="Bild 0"></div>
+            <div class="swiper-slide"><img src="assets/1.jpg" alt="Bild 1"></div>
+            <div class="swiper-slide"><img src="assets/2.jpg" alt="Bild 2"></div>
+            <div class="swiper-slide"><img src="assets/3.jpg" alt="Bild 3"></div>
+            <div class="swiper-slide"><img src="assets/4.jpg" alt="Bild 4"></div>
+            <div class="swiper-slide"><img src="assets/5.jpg" alt="Bild 5"></div>
             <!-- Weitere Bilder hier -->
         </div>
         <!-- Add Pagination -->
